# sidus-heroes-task

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
postman/: sidus-heroes-task.postman_collection.json
src/: app.py
src/modules/: crud.py  database.py  dependencies.py  models.py  schemas.py
src/modules/database/: crud.py  database.py  models.py  schemas.py
src/tests/: __init__.py  test_database.py
