[tool.poetry]
name = "sidus-heroes-task"
version = "1.0.0"
description = ""
authors = ["Nikolas <timofeevnik41@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
SQLAlchemy = "^1.4.40"
uvicorn = "^0.18.2"
fastapi-cache2 = {extras = ["redis"], version = "^0.1.9"}
aioredis = "^2.0.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
